tests/errors/bad-decimal-digit/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0005]: Invalid digits.
  │
  ├─𜱶 help: decimal literals use digits `0`–`9` (e.g. `47`).
  │
2 │ def main = 12a3
  │              ^^
  ╰─𜱶 tests/errors/bad-decimal-digit/main.pa:2:14
